# csv2latex

./: .gitignore  README.md  config.json  pyproject.toml
csv2latex/: csv2latex.py
test/: test_csv2latex.py
