[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2latex"
version = "0.2.0"
authors = [{name = "r1t0"}]
description = "Convert CSV files to LaTeX tables, automatically highlighting extreme values."
readme = "README.md"
license = {text = "GPL"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
]

[project.entry-points."console_scripts"]
csv2latex = "csv2latex.csv2latex:main"

[project.urls]
Homepage = "https://github.com/Rito-492/csv2latex"
